# Nonull

./: .coverage  .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INTERNAL-NOTES.md  Makefile  README.md  __smoke_devops.bat  debug_capture.py  debug_result.py  debug_run_sync.py  debug_trace.py  debug_trace2.py  docker-compose.yml  dump2.txt  dump3.txt  pyproject.toml  registry_dump.txt  requirements.txt  run_eval_check.py  setup.py  test_creative_output.txt  test_final.txt  test_full.txt  test_gen.txt  test_gen_full.txt  test_inv.txt  test_meta.txt  test_pip.txt  test_smoke_creative.txt  test_smoke_output.txt
.github/: CODEOWNERS
channels/: __init__.py  base.py  channel_hub.py  cli.py  dingtalk_client.py  feishu_client.py  gateway.py  mcp_adapter.py  mcp_server.py  platform_adapters.py  qq_client.py  telegram_client.py  web.py  webhook_server.py  wecom_client.py
config/: config.yaml  safety_rules.yaml
consciousness/: __init__.py  autonomy_engine.py  consciousness_loop.py  curiosity_driver.py  self_model.py
core/: __init__.py  action_registry.py  agent_core.py  agent_enhancements.py  agent_loop.py  config.py  context_manager.py  cost_tracker.py  errors.py  eval_judge.py  event_stream.py  filter_pipeline.py  graph_memory.py  guardrails.py  handoff.py  hooks.py  llm_client.py  memory_legacy.py  memory_system.py  persistence.py  persona_orchestrator.py  prompt_optimizer.py  prompt_registry.py  reasoning.py  registries.py  safety.py  session_memory.py  states.py  structured_output.py  sub_agent.py  subagents.py  tracing.py
docs/: architecture.md  deep-eval-report.md  innovation-report.md  llm-setup.md  project-report.md  skills-catalog.md  user-guide.md  一页纸速览.md  快速上手指南.md  说明书-完整版.md
domains/: __init__.py  registry.py
evaluation/: __init__.py  benchmarks.py  runner.py
evolution/: evolution_orchestrator.py  experience_miner.py  knowledge_consolidator.py  prompt_optimizer.py  skill_genesis.py
examples/: agent_loop_demo.py  code_review.py  code_review_demo.py  feishu_bot_demo.py  interactive_demo.py  memory_continuity_demo.py  multi_agent_workflow.py  multimodel_demo.py  quickstart.py  safety_analysis.py  semantic_retrieval_demo.py  skill_workflow.py  test_llm_connection.py
experimental/: README.md
hooks/: __init__.py  hook_system.py
i18n/: __init__.py
memory/: __init__.py  episodic.py  local_embedder.py  neocortex.py  procedural.py  semantic.py  semantic_index.py  subconscious_loop.py  working_memory.py
multimodel/: INTEGRATION_GUIDE.md  __init__.py  collaborator.py  dispatcher.py  litellm_config.yaml  nonull_models.yaml  registry.py  router.py  scheduler.py
nonull/: __init__.py  __main__.py
orchestration/: __init__.py  agent_pool.py  communication.py  orchestrator.py  workflows.py
persona/: __init__.py  co_pilot.py  driving_persona.py  persona_orchestrator.py  safety_badge.py  scenario_engine.py
safety/: README.md  __init__.py  compliance.py  deny_first.py  guardian.py
(+122 files in other folders)
