# Nonull AI Agent Framework
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nonull-agent"
dynamic = ["version"]
description = "Domain-agnostic AI Agent Framework — 领域无关的AI智能体框架"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nonull Team" },
]
keywords = ["ai-agent", "multi-agent", "llm", "autonomous", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0,<7",
    "pydantic>=2.0,<3",
    "rich>=13.0,<14",
    "httpx>=0.27,<1",
    "tiktoken>=0.7,<1",
    "anthropic>=0.39.0,<1",
    "openai>=1.30.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
multimodal = [
    "Pillow>=10.0",
    "openai-whisper>=20231117",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]
channels = [
    "cryptography>=42.0",
]
docker = [
    "docker>=7.0",
]
vector = [
    "numpy>=1.24",
]

[project.scripts]
nonull = "nonull.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["nonull", "core", "memory", "safety", "skills", "domains",
            "orchestration", "channels", "hooks", "persona", "config",
            "evaluation", "i18n", "experimental"]

# ---------------------------------------------------------------------------
# Ruff linting / formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["nonull", "core", "memory", "safety", "skills", "domains",
                     "orchestration", "channels", "hooks", "persona", "config",
                     "evaluation", "i18n", "experimental"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# VCS
# ---------------------------------------------------------------------------
[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
